<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:elevation="4dp" />

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp10"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/im_current_read_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_camera"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:text="@string/employee_id"
                android:textColor="@color/black"
                android:textSize="17sp"
                tools:ignore="RtlHardcoded,TextViewEdits" />

            <EditText
                android:id="@+id/edit_emp_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:enabled="false"
                android:hint="@string/enter_employee_id"
                android:textColor="@color/black"
                android:maxLines="1"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:text="@string/employee_name"
                android:textSize="17sp"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="Enter Employee Name"
                android:textColor="@color/black"
                android:background="@drawable/border"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/remarks"
                android:textColor="@color/black"
                android:textSize="17sp"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/edit_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:hint="@string/remark_desc"
                android:maxLines="5"
                android:textColor="@color/black"
                android:padding="29dp"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@color/colorAccent"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/submit" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>